--- a/overlay/frameworks/base/core/res/res/values/strings.xml
+++ b/overlay/frameworks/base/core/res/res/values/strings.xml
@@ -44,5 +44,8 @@
         <item>Move your finger slightly</item>
         <item>This fingerprint has been added, use a different finger</item>
     </string-array>
+
+    <!-- Do not translate. Default access point SSID used for tethering -->
+    <string name="wifi_tether_configure_ssid_default" translatable="false">Redmi K20 Pro</string>
 </resources>
 
